# udeproject

branches/BRANCH-0.2/ude/: ChangeLog  Makefile.am  NEWS  autogen.sh  configure.in
branches/BRANCH-0.2/ude/config/: urdb
branches/BRANCH-0.2/ude/gfx/: back.xpm  close.xpm  closes.xpm
branches/BRANCH-0.2/ude/lib/: ude-i18n.h  ude-internals.h  ude-raster.xbm  ude-vector.h
branches/BRANCH-0.2/ude/po/: de.po  pt_BR.po  sk.po  sv.po
branches/BRANCH-0.2/ude/tests/commstest/: Makefile
branches/BRANCH-0.2/ude/tests/menu/: menutst.c
branches/BRANCH-0.2/ude/uwm/: Makefile.am  handlers.c  init.c  placement.c  placement.h  properties.c  resize.c  special.c  uwm.h  widgets.c  widgets.h  windows.c
branches/udeproject/ude/: NEWS  README  acconfig.h  ude.spec.in
branches/udeproject/ude/config/: Makefile.am  uwmrc-behaviour.hook
branches/udeproject/ude/doc/: manual.tex
branches/udeproject/ude/lib/: ude-desktop.h  ude-wraparounds.c
branches/udeproject/ude/po/: es.po  pt_BR.po
branches/udeproject/ude/uwm/: Makefile.am  applications.c  handlers.c  handlers.h  init.h  menu.h  move.c  nodes.c  nodes.h  rubber.c  special.c  urm.h  uwmmenu.c  widgets.c  windows.c  workspaces.c  workspaces.h
branches/udeproject/ude/uwm/.deps/: applications.P  handlers.P  move.P  nodes.P  pix.P  properties.P  resize.P  rubber.P  urm.P  uwm.P  uwmmenu.P  widgets.P  windows.P  winmenu.P  workspaces.P
main/ude/: AUTHORS  ChangeLog  NEWS  README  TODO  acconfig.h  autogen.sh  configure.in  ude.spec.in
main/ude/config/: Makefile.am  StartScript  StartScript.in  urdb  uwmrc  uwmrc-behaviour.hook  uwmrc-layout.hook  uwmrc-ws.hook  uwmrc.new
main/ude/doc/: Makefile.am  l2h.conf  manual.tex
main/ude/doc/html/: Makefile.am
main/ude/gfx/: autorises.xpm  shape.xpm
main/ude/lib/: ude-box.h  ude-menu.c  ude-settings.h  ude.h
main/ude/po/: de.po  es.po  pt_BR.po  sk.po  sv.po  tr.po
main/ude/uwm/: Makefile.am  applications.h  conf_func.c  conf_func.h  conf_func_list.h  configconvertors.c  confparse.h  confparse.l  confparse.lex.l  confparse.tab.y  confparse.y  handlers.c  handlers.h  init.c  init.h  menu.c  menu.h  move.c  nodes.c  nodes.h  pix.c  pix.h  placement.c  placement.h  properties.c  properties.h  resize.c  settings.h  settings_global_list.h  settings_workspace_list.h  special.c  special.h  ude_config_consts.h  urm.c  urm.h  uwm.c  uwm.h  uwm_intl.h  uwmmenu.c  widgets.c  (+10 more)
main/ude/uwm/.deps/: init.P  menu.P  placement.P  selection.P  special.P  winmenumenu.P
main/urdb2gtkd/: ChangeLog  NEWS  a.out  configure.in  tst.c
tags/RELEASE-0.0.2/urdb2gtkd/: README
tags/RELEASE-0.0.3/urdb2gtkd/: Makefile.am  README  autogen.sh
tags/RELEASE-0.2.9/ude/: Makefile.am
tags/RELEASE-0.2.9/ude/doc/: Makefile.am
tags/RELEASE-0.2.9/ude/gfx/: autorise.xpm  backs.xpm  bgr1.xpm  menu.xpm
tags/RELEASE-0.2.9/ude/po/: es.po
tags/RELEASE-0.2.9/ude/uwm/: move.c  shape.bitmap  special.h  winmenu.h  winmenumenu.c
tags/RELEASE-0.2.9a/ude/: README  configure.in
tags/RELEASE-0.2.9a/ude/gfx/: Makefile.am  iconify.xpm  kills.xpm  menus.xpm
tags/RELEASE-0.2.9a/ude/lib/: Makefile.am  ude-button.h  ude-hex.c
tags/RELEASE-0.2.9a/ude/tests/: Makefile
tags/RELEASE-0.2.9a/ude/uwm/: init.c  nodes.c  selection.c  windows.c  winmenu.c  workspaces.c
urdb2gtkd/main/: AUTHORS  urdb2gtkd.c
urdb2gtkd/tags/RELEASE-0.0.2/: Makefile.am  configure.in
urdb2gtkd/tags/RELEASE-0.0.3/: uwm.patch
uwm-menueditor/main/: AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac  graph.h  list.h  main.c  menu.c  menu.h  special.c  special.h
uwm-menueditor/main/gui/: Makefile.am  config.h  tree.c  tree.h  xbutton.c  xbutton.h  xdialog.c  xdialog.h  xdraw.c  xdraw.h  xframe.c  xframe.h  xlabel.c  xlabel.h  xobject.c  xobject.h  xscroll.c  xscroll.h  xtextbox.c  xtextbox.h  xtools.c  xtools.h  xtoolsgc.c  xtoolsgc.h  xwindow.c  xwindow.h
uwm-menueditor/main/menued/: Makefile.am  graph.c  graph.h  list.c  main.h
uwm/branches/BRANCH-0.2/: ChangeLog  Makefile.am  NEWS  Readme.CVS  configure.ac  configure.in
uwm/branches/BRANCH-0.2/config/: urdb
uwm/branches/BRANCH-0.2/doc/: Makefile.am
uwm/branches/BRANCH-0.2/gfx/: README  autorise.xpm  autorises.xpm  backs.xpm  close.xpm  closes.xpm  iconify.xpm  iconifys.xpm  kills.xpm  menus.xpm  really.xpm  reallys.xpm
uwm/branches/BRANCH-0.2/lib/: Makefile.am  TODO  ude-desktop.h  ude-vector.c
uwm/branches/BRANCH-0.2/po/: ChangeLog  de.po  it.po  sk.po  sv.po  tr.po
uwm/branches/BRANCH-0.2/tests/: box-n-events.c
uwm/branches/BRANCH-0.2/uwm/: Makefile.am  MwmUtil_fixed.h  handlers.c  init.c  menu.c  menu.h  pix.c  placement.c  properties.c  rubber.h  special.c  special.h  urm.c  urm.h  uwm.c  uwm.h  uwmmenu.c  widgets.c  windows.c  winmenu.c  winmenumenu.c  workspaces.c  workspaces.h
uwm/main/: ChangeLog  README  TODO  autogen.sh  configure.in
uwm/main/config/: Makefile.am
uwm/main/doc/: manual.tex
uwm/main/gfx/: autorise.xpm  back.xpm  kill.xpm  menu.xpm  really.xpm
uwm/main/lib/: ude-bevels.h  ude-button.c  ude-desktop.h  ude-types.h
uwm/main/po/: Makevars  de.po  sk.po
uwm/main/uwm/: Makefile.am  confparse.h  handlers.c  init.c  init.h  menu.c  menu.h  move.h  nodes.h  pix.c  pix.h  properties.c  properties.h  resize.h  rubber.h  selection.h  settings_workspace_list.h  special.h  tree.h  ude_config_consts.h  urm.h  uwm.c  uwm.h  uwmmenu.c  uwmmenu.h  widgets.h  windows.c  windows.h  winmenu.h  winmenumenu.c
uwm/tags/RELEASE-0.2.10/: autogen.sh  configure.ac
uwm/tags/RELEASE-0.2.10/config/: urdb
uwm/tags/RELEASE-0.2.10/doc/: uwm_manual.lyx
uwm/tags/RELEASE-0.2.10/lib/: ude-bevels.c
uwm/tags/RELEASE-0.2.10/uwm/: menu.c  (+2 more)
uwm/tags/RELEASE-0.2.10a/: Makefile.am  PROBLEMS  configure.ac
uwm/tags/RELEASE-0.2.10a/doc/html/: Makefile.am
uwm/tags/RELEASE-0.2.11/: ChangeLog  Makefile.am
uwm/tags/RELEASE-0.2.11a/: ChangeLog  configure.ac
uwm/tags/RELEASE-0.2.9/: ChangeLog  configure.in
uwm/tags/RELEASE-0.2.9/lib/: Makefile.am  desktop_internals.h  ude-box.c  ude-events.h  ude-settings.c  ude-wraparounds.h
uwm/tags/RELEASE-0.2.9a/: ChangeLog
(+34 files in other folders)
