#SUBDIRS= html
TEXSOURCES= \
	scratch.lyx \
	uwm_manual.lyx \
	manual.tex 
TEXOUTPUT= \
	scratch.dvi \
	scratch.txt \
	uwm_manual.dvi \
	uwm_manual.txt \
	manual.dvi
DIR_CONTENTS= ${TEXSOURCES} ${TEXOUTPUT}
udedocdir= ${prefix}/doc/${PACKAGE}-${VERSION}
udedoc_DATA= ${TEXSOURCES}
EXTRA_DIST= ${TEXSOURCES} 
