AC_INIT(urdb2gtkd.c)

if [test -z "$CFLAGS" ]; then
        CFLAGS="-O2"
fi
export CFLAGS

VERSION=0.0.2
AM_INIT_AUTOMAKE(urdb2gtkd, $VERSION)
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PATH_XTRA
AC_CHECK_LIB(X11, main,,
AC_MSG_ERROR(No Xlib found. Please check if your X11 is installed correctly.),
$X_CFLAGS $X_PRE_LIBS $X_EXTRA_LIBS $X_LIBS)

AC_PATH_X
AC_HEADER_STDC
AC_HEADER_SYS_WAIT

AC_TYPE_PID_T

CFLAGS="$CFLAGS $X_CFLAGS"
LDFLAGS="$LDFLAGS $X_LIBS $X_EXTRA_LIBS $X_PRE_LIBS"

AC_TYPE_SIGNAL

AC_OUTPUT(Makefile)
