noinst_LTLIBRARIES = libgui.la
libgui_la_SOURCES = xbutton.c \
                 xbutton.h \
                 xdialog.c \
                 xdialog.h \
                 xdraw.c   \
                 xdraw.h   \
                 xframe.c  \
                 xframe.h  \
                 xlabel.c  \
                 xlabel.h  \
                 xobject.c \
                 xobject.h \
                 xtextbox.c\
                 xtextbox.h\
                 xtools.c  \
                 xtools.h  \
                 xwindow.c \
                 xwindow.h
