noinst_LTLIBRARIES = libgui.la
libgui_la_SOURCES = xbutton.c \
                 xbutton.h \
                 xdialog.c \
                 xdialog.h \
                 xdraw.c   \
                 xdraw.h   \
                 xframe.c  \
                 xframe.h  \
                 xlabel.c  \
                 xlabel.h  \
                 xobject.c \
                 xobject.h \
                 xscroll.c \
                 xscroll.h \
                 xtextbox.c\
                 xtextbox.h\
                 xtools.c  \
                 xtools.h  \
                 xtoolsgc.c \
                 xtoolsgc.h \
                 xwindow.c \
                 xwindow.h \
                 tree.c \
                 tree.h
