bin_PROGRAMS = uwm-menued
uwm_menued_SOURCES = graph.c   \
                     graph.h   \
                     list.c    \
                     list.h    \
                     main.c    \
                     main.h    \
                     menu.c    \
                     menu.h    \
                     special.c \
                     special.h
uwm_menued_LDADD = ../gui/libgui.la -lX11
