DIR_CONTENTS= \
	autorise.xpm \
	autorises.xpm \
	back.xpm \
	backs.xpm \
	bgr1.xpm \
	close.xpm \
	closes.xpm \
	iconify.xpm \
	iconifys.xpm \
	kill.xpm \
	kills.xpm \
	menu.xpm \
	menus.xpm \
	really.xpm \
	reallys.xpm \
	shape.xpm

udegfxdir= ${pkgdatadir}/gfx
udegfx_DATA= ${DIR_CONTENTS}
EXTRA_DIST= ${DIR_CONTENTS} 