### if you want to compile the library uncomment the following two lines and
### remove the line after them:
# lib_LTLIBRARIES= libude.la
# libude_la_SOURCES=\
EXTRA_DIST=\
                        ude-box.c \
                        ude-bevels.c \
			ude-desktop.c \
                        ude-settings.c \
                        ude-wraparounds.c \
                        ude-hex.c \
                        ude-button.c \
			ude-vector.c \
			ude-menu.c
# Version information. 
# This could be diferent form the package version see the libtool info manual
# to know why and how to change the numbers
### if you want to compile the library uncomment the following line:
# libude_la_LDFLAGS= -version-info 0:0:0

pkginclude_HEADERS= ude-i18n.h \
                        ude-bevels.h \
			ude-box.h \
			ude-desktop.h \
			ude-events.h \
			ude-types.h \
			ude-vector.h \
                        ude-settings.h \
			ude-wraparounds.h \
			ude-hex.h \
                        ude-button.h \
                        ude-internals.h \
                        ude-raster.xbm \
			ude.h \
			ude-menu.h
